build_errors.txt
   Compiling command_line_helper v2.0.0 (D:\Projects\command-line-helper)
error: argument never used
  --> src\installer.rs:75:77
   |
75 |                     println!("    Ubuntu/Debian: sudo apt install python3", "  ".cyan());
   |                              ---------------------------------------------  ^^^^^^^^^^^ argument never used
   |                              |
   |                              formatting specifier missing

error: argument never used
  --> src\installer.rs:76:70
   |
76 |                     println!("    Fedora: sudo dnf install python3", "  ".cyan());
   |                              --------------------------------------  ^^^^^^^^^^^ argument never used
   |                              |
   |                              formatting specifier missing

error: argument never used
  --> src\installer.rs:77:65
   |
77 |                     println!("    Arch: sudo pacman -S python", "  ".cyan());
   |                              ---------------------------------  ^^^^^^^^^^^ argument never used
   |                              |
   |                              formatting specifier missing

warning: unused import: `Select`
 --> src\installer.rs:2:26
  |
2 | use dialoguer::{Confirm, Select};
  |                          ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `PathBuf`
 --> src\modules\archive_module.rs:7:23
  |
7 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: unused import: `SystemTime`
   --> src\modules\git_module.rs:236:31
    |
236 |     use std::time::{Duration, SystemTime, UNIX_EPOCH};
    |                               ^^^^^^^^^^

warning: unused imports: `IntoResponse` and `Query`
 --> src\modules\server_module.rs:2:15
  |
2 |     extract::{Query, State},
  |               ^^^^^
3 |     http::StatusCode,
4 |     response::{Html, IntoResponse, Json},
  |                      ^^^^^^^^^^^^

warning: unused import: `tower_http::services::ServeDir`
  --> src\modules\server_module.rs:13:5
   |
13 | use tower_http::services::ServeDir;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `e`
   --> src\modules\server_module.rs:157:16
    |
157 |     if let Err(e) = config.save() {
    |                ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0599]: no function or associated item named `load_from_file` found for struct `config::Config` in the current scope
   --> src\main.rs:770:31
    |
770 |         match config::Config::load_from_file(path) {
    |                               ^^^^^^^^^^^^^^ function or associated item not found in `Config`
    |
   ::: src\config.rs:7:1
    |
7   | pub struct Config {
    | ----------------- function or associated item `load_from_file` not found for this struct
    |
note: if you're trying to build a new `config::Config`, consider using `config::Config::load` which returns `Result<config::Config, Box<(dyn StdError + 'static)>>`
   --> src\config.rs:52:5
    |
52  |     pub fn load() -> Result<Self, Box<dyn std::error::Error>> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Digest`
 --> src\modules\hash_module.rs:3:12
  |
3 | use sha2::{Digest, Sha256, Sha512};
  |            ^^^^^^

warning: variable does not need to be mutable
   --> src\modules\git_module.rs:206:24
    |
206 |                     Ok(mut commit) => {
    |                        ----^^^^^^
    |                        |
    |                        help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

error[E0506]: cannot assign to `commit` because it is borrowed
   --> src\modules\git_module.rs:220:51
    |
211 |                             let author = commit.author();
    |                                          ------ `commit` is borrowed here
...
220 |                                     Ok(parent) => commit = parent,
    |                                                   ^^^^^^ `commit` is assigned to here but it was already borrowed
...
224 |                         }
    |                         - borrow might be used here, when `author` is dropped and runs the `Drop` code for type `Signature`

error[E0382]: borrow of moved value: `algo`
   --> src\modules\hash_module.rs:147:36
    |
138 |     for algo in [
    |         ---- move occurs because `algo` has type `HashAlgorithm`, which does not implement the `Copy` trait
...
143 |         match hash_file(file_path, algo) {
    |                                    ---- value moved here
...
147 |                     format!("{}:", algo.name()).cyan().bold(),
    |                                    ^^^^ value borrowed here after move
    |
note: consider changing this parameter type in function `hash_file` to borrow instead if owning the value isn't necessary
   --> src\modules\hash_module.rs:34:50
    |
34  | pub fn hash_file(file_path: &PathBuf, algorithm: HashAlgorithm) -> Result<String, io::Error> {
    |        --------- in this function                ^^^^^^^^^^^^^ this parameter takes ownership of the value
note: if `HashAlgorithm` implemented `Clone`, you could clone the value
   --> src\modules\hash_module.rs:8:1
    |
8   | pub enum HashAlgorithm {
    | ^^^^^^^^^^^^^^^^^^^^^^ consider implementing `Clone` for this type
...
143 |         match hash_file(file_path, algo) {
    |                                    ---- you could clone this value

Some errors have detailed explanations: E0382, E0506, E0599.
For more information about an error, try `rustc --explain E0382`.
warning: `command_line_helper` (bin "command_line_helper") generated 8 warnings
error: could not compile `command_line_helper` (bin "command_line_helper") due to 6 previous errors; 8 warnings emitted
